# ormdantic

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg
.cargo/: config.toml
.cursor/: mcp.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: benchmark-publish.yml  benchmark-report.yml  cache.yml  ci.yml  codspeed.yml  docs.yml  docs_preview.yml  integration.yml  latest-changes.yml  lint.yml  release.yml  rust.yml  test.yml  wheels.yml
benchmark/: README.md  __init__.py  backends.py  cases.py  charts.py  compare.py  config.py  datasets.py  models.py  ormdantic_vs_sqlalchemy.py  publish.py  report.py  run.py  runner.py  schema.py
benchmark/charts/: ormdantic-vs-sqlalchemy-summary.csv
benchmark/results/: default-orm-benchmark.json  huge-orm-benchmark.json  mysql-smoke-orm-benchmark.json  ormdantic-vs-sqlalchemy.json  postgres-smoke-orm-benchmark.json  sqlite-smoke-orm-benchmark.json
docker/databases/: .env.example  README.md  docker-compose.yaml  run-tests.sh
docs/: contributing.md  differences.tgn  faq.md  index.md  installation.md  learning-path.md  performance.md  philosophy.md  quickstart.md  release.md  troubleshooting.md  usage.md  why-ormdantic.md
docs/api/: associations.md  crud.md  engine.md  errors.md  events.md  expressions.md  field.md  internals.md  loaders.md  metadata.md  migrations.md  ormdantic.md  playground.md  query.md  reference.md  reflection.md  serializer.md  session.md  table.md
docs/architecture/: dialect-support.md  migration-history.md  refactor-test-roadmap.md  rust-core.md  sqlalchemy-parity.md  vnext-migration.md
docs/comparisons/: sqlalchemy.md  sqlmodel.md
docs/concepts/: database-and-tables.md  events.md  field-types-and-metadata.md  index.md  loading-strategies.md  migrations-and-reflection.md  native-engine.md  querying.md  relationships.md  transactions-and-sessions.md
docs/css/: custom.css  termynal.css
docs/development/: async-orm-completeness-audit.md  contributing.md  documentation-matrix.md  local-development.md  releasing.md
docs/drivers/: index.md  mariadb.md  (+5 more)
examples/: __init__.py  basic_crud.py  enterprise_dialects.py  migrations_reflection.py  query_expressions.py  relationships.py  transactions_sessions.py
ormdantic/: __init__.py  _introspect.py  _native.py  association.py  cli.py  engine.py  errors.py  events.py  expressions.py  hydration.py  loaders.py  migrations.py  naming.py  orm.py  reflection.py  schema.py  serializer.py  session.py  table.py  values.py
pydanticORM/: __init__.py  orm.py  table.py
pydantic_orm/: __init__.py  orm.py  table.py
requirements/: all.txt  docs.in  docs.txt  extra.in  extra.txt  linting.in  linting.txt  pyproject.txt  testing.in  testing.txt
rust/: README.md
rust/crates/ormdantic-core/: Cargo.toml  README.md
rust/crates/ormdantic-core/benches/: core_primitives.rs
rust/crates/ormdantic-core/src/: lib.rs
rust/crates/ormdantic-core/tests/: errors.rs
rust/crates/ormdantic-dialects/: Cargo.toml  README.md
rust/crates/ormdantic-dialects/benches/: dialect_rendering.rs
rust/crates/ormdantic-dialects/src/: ddl.rs  identifiers.rs  kind.rs  lib.rs  reflection.rs  transactions.rs
rust/crates/ormdantic-dialects/tests/: capabilities.rs  ddl.rs  dialect_matrix.rs  identifiers.rs  parsing.rs  reflection.rs  transactions.rs  upsert.rs
rust/crates/ormdantic-engine/: Cargo.toml  README.md
rust/crates/ormdantic-engine/benches/: engine_introspection.rs  runtime_core.rs
rust/crates/ormdantic-engine/src/: connection.rs  lib.rs  migration_store.rs  reflection.rs  result.rs  runtime.rs  statement.rs  url.rs  value.rs
rust/crates/ormdantic-engine/src/drivers/: mod.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs
rust/crates/ormdantic-engine/tests/: driver_matrix.rs  mariadb_exec.rs  mssql_exec.rs  mysql_exec.rs  oracle_exec.rs  postgres_exec.rs  runtime_core.rs
rust/crates/ormdantic-engine/tests/drivers/: common.rs  mariadb.rs  mod.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs
rust/crates/ormdantic-engine/tests/support/: mod.rs
rust/crates/ormdantic-hydrate/: Cargo.toml  README.md
rust/crates/ormdantic-hydrate/benches/: hydration_planning.rs  nested_hydration.rs
rust/crates/ormdantic-hydrate/src/: columns.rs  flat.rs  graph.rs  keys.rs  lib.rs  row.rs  selectin.rs
rust/crates/ormdantic-hydrate/tests/: columns.rs  flat.rs  graph.rs  keys.rs  result_shape.rs  selectin.rs
rust/crates/ormdantic-py/: Cargo.toml  README.md  build.rs
rust/crates/ormdantic-py/benches/: py_bridge.rs
rust/crates/ormdantic-py/src/: bindings.rs  database.rs  ddl.rs  events.rs  hydration.rs  lib.rs  migrations.rs  query.rs  runtime.rs  schema.rs  session.rs  table_handle.rs  transactions.rs  utils.rs
rust/crates/ormdantic-schema/: Cargo.toml  README.md
rust/crates/ormdantic-schema/benches/: schema_core.rs
rust/crates/ormdantic-schema/src/: alias.rs  column.rs  constraints.rs  diff.rs  index.rs  lib.rs  namespace.rs  reflection.rs  registry.rs  relationships.rs  table.rs
rust/crates/ormdantic-schema/tests/: alias.rs  columns.rs  constraints.rs  diff.rs  indexes.rs  namespaces.rs  reflection.rs  registry.rs  relationships.rs  tables.rs
rust/crates/ormdantic-sql/: Cargo.toml  README.md
rust/crates/ormdantic-sql/benches/: dml_compiler.rs  expression_compiler.rs  sql_compiler.rs
rust/crates/ormdantic-sql/src/: ast.rs  compiler.rs  filters.rs  lib.rs
rust/crates/ormdantic-sql/tests/: ast_facade.rs  crud_compiler.rs  expressions.rs  filters.rs  joins.rs
scripts/: bump_version.py  clean.sh  coverage-rust.sh  coverage_combined.py  docs_build.sh  docs_serve.sh  format.sh  integration.sh  lint.sh  requirements.sh  smoke_installed_package.py  test.sh  test_html.sh
taplo/: README.md
tests/: conftest.py  test_engine.py  test_errors.py  test_events.py  test_generator.py  test_hydration.py  test_introspect.py  test_m2m_relations.py  test_orm.py  test_otm_relations.py  test_query_filters.py  test_rust_bridge.py  test_snake.py  test_version.py
(+279 files in other folders)
