[workspace]
members = [
  "rust/crates/ormdantic-core",
  "rust/crates/ormdantic-schema",
  "rust/crates/ormdantic-hydrate",
  "rust/crates/ormdantic-dialects",
  "rust/crates/ormdantic-engine",
  "rust/crates/ormdantic-sql",
  "rust/crates/ormdantic-py",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/yezz123/ormdantic"
repository = "https://github.com/yezz123/ormdantic"
rust-version = "1.75"

[workspace.dependencies]
ormdantic-core = { path = "rust/crates/ormdantic-core" }
ormdantic-schema = { path = "rust/crates/ormdantic-schema" }
ormdantic-hydrate = { path = "rust/crates/ormdantic-hydrate" }
ormdantic-dialects = { path = "rust/crates/ormdantic-dialects" }
ormdantic-engine = { path = "rust/crates/ormdantic-engine" }
ormdantic-sql = { path = "rust/crates/ormdantic-sql" }
pyo3 = "0.26"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
debug = true
strip = false

# This is separate to benchmarks because `bench` ends up building testing
# harnesses into code, as it's a special cargo profile.
[profile.profiling]
inherits = "release"
debug = true
strip = false
