[workspace]
members = [
  "rust/crates/ormdantic-core",
  "rust/crates/ormdantic-schema",
  "rust/crates/ormdantic-hydrate",
  "rust/crates/ormdantic-dialects",
  "rust/crates/ormdantic-engine",
  "rust/crates/ormdantic-sql",
  "rust/crates/ormdantic-py",
]
resolver = "2"

[workspace.package]
description = "Rust-backed async ORM for Python applications that already use Pydantic models as their data boundary."
authors = ["Yasser Tahiri <hello@yezz.me>"]
license = "MIT"
repository = "https://github.com/yezz123/ormdantic"
readme = "README.md"
version = "2.0.0"
edition = "2021"
rust-version = "1.88"
categories = ["database", "orm", "async"]
keywords = ["orm", "pydantic", "asyncio", "rust", "sql", "sqlalchemy"]
documentation = "https://ormdantic.yezz.me/"
homepage = "https://ormdantic.yezz.me/"

[workspace.dependencies]
ormdantic-core = { version = "2.0.0", path = "rust/crates/ormdantic-core" }
ormdantic-schema = { version = "2.0.0", path = "rust/crates/ormdantic-schema" }
ormdantic-hydrate = { version = "2.0.0", path = "rust/crates/ormdantic-hydrate" }
ormdantic-dialects = { version = "2.0.0", path = "rust/crates/ormdantic-dialects" }
ormdantic-engine = { version = "2.0.0", path = "rust/crates/ormdantic-engine" }
ormdantic-sql = { version = "2.0.0", path = "rust/crates/ormdantic-sql" }
pyo3 = "0.29.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
debug = true
strip = false

# This is separate to benchmarks because `bench` ends up building testing
# harnesses into code, as it's a special cargo profile.
[profile.profiling]
inherits = "release"
debug = true
strip = false
