[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "ormdantic"
description = "Rust-backed async ORM for Python applications that already use Pydantic models as their data boundary."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yasser Tahiri", email = "hello@yezz.me" }]
keywords = ["orm", "pydantic", "asyncio", "rust", "sql", "sqlalchemy"]

classifiers = [
  'Development Status :: 3 - Alpha',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Programming Language :: Python :: Implementation :: GraalPy',
  'Programming Language :: Rust',
  'Framework :: Pydantic',
  'Framework :: Pydantic :: 2',
  'Intended Audience :: Developers',
  'Intended Audience :: Information Technology',
  'Operating System :: POSIX :: Linux',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: MacOS',
  'Typing :: Typed',
]

dependencies = [
  "pydantic>=2.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "typing-extensions>=4.0.0",
  "typer>=0.26.7",
]

dynamic = ['version']

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://github.com/yezz123/ormdantic"
Documentation = "https://ormdantic.yezz.me/"
Funding = 'https://github.com/sponsors/yezz123'

[project.scripts]
ormdantic = "ormdantic.cli:main"

[project.optional-dependencies]
sqlite = []
postgresql = []

[dependency-groups]
testing = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "pytest-cov>=6.2.0",
  "python-decouple",
  "pytest-pretty",
  "pytest-benchmark>=5.2.0",
  "pytest-codspeed>=5.0.3",
]
linting = ["pre-commit>=4.6.0", "ty>=0.0.56"]
docs = [
  "cairosvg >=2.8.2",
  "griffe-typingdoc >=0.3.0",
  "griffe-warnings-deprecated >=1.1.0",
  "markdown-include-variants >=0.0.8",
  "mdx-include >=1.4.1",
  "mkdocstrings[python] >=1.0.3",
  "pillow >=11.3.0",
  "pyyaml >=5.3.1",
  "zensical>=0.0.42",
]
benchmark = [
  "aiomysql>=0.2.0",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "sqlmodel>=0.0.20",
]
dev = [
  { include-group = "testing" },
  { include-group = "linting" },
  { include-group = "docs" },
  "maturin>=1,<2",
]

[tool.hatch.version]
path = "ormdantic/__init__.py"

[tool.maturin]
manifest-path = "rust/crates/ormdantic-py/Cargo.toml"
python-source = "."
module-name = "ormdantic._ormdantic"
bindings = "pyo3"
features = ["extension-module"]

[tool.isort]
profile = "black"
known_third_party = ["pydantic", "typing_extensions"]

[tool.ruff.lint]
mccabe = { max-complexity = 14 }
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
  "PYI", # typing style checks
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["pydantic", "typing_extensions"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.coverage.run]
source = ["ormdantic"]
branch = true
context = '${CONTEXT}'

[tool.coverage.paths]
source = [
  'ormdantic/',
  '/Users/runner/work/ormdantic/ormdantic/ormdantic/',
  'D:\a\ormdantic\ormdantic\ormdantic',
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["ormdantic"]

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"

[tool.coverage.report]
precision = 2
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "raise NotImplemented",
  "@overload",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
