[package]
name = "ormdantic-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared Rust primitives for Ormdantic"
readme = "README.md"

[lib]
name = "ormdantic_core"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "4.7.0", package = "codspeed-criterion-compat" }

[[bench]]
name = "core_primitives"
harness = false
