[package]
name = "ormdantic-dialects"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQL dialect support for Ormdantic"
readme = "README.md"

[lib]
name = "ormdantic_dialects"
path = "src/lib.rs"

[dependencies]
ormdantic-core.workspace = true
ormdantic-schema.workspace = true
