[package]
name = "ormdantic-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Native database execution for Ormdantic"
readme = "README.md"

[lib]
name = "ormdantic_engine"
path = "src/lib.rs"

[features]
default = ["sqlite", "postgres", "mysql"]
sqlite = []
postgres = []
mysql = []
mariadb = ["mysql"]
mssql = ["dep:tiberius", "dep:tokio", "dep:tokio-util"]
oracle = ["dep:oracle-rs", "dep:tokio"]
all-engines = ["sqlite", "postgres", "mysql", "mariadb", "mssql", "oracle"]

[dependencies]
mysql = "28.0.0"
oracle-rs = { version = "0.1.7", optional = true }
ormdantic-core.workspace = true
ormdantic-dialects.workspace = true
ormdantic-schema.workspace = true
postgres = "0.19"
regex = "1"
rusqlite = { version = "0.32.1", features = ["bundled", "column_decltype", "functions"] }
tiberius = { version = "0.12.3", default-features = false, features = [
  "rustls",
  "tds73",
], optional = true }
tokio = { version = "1.52.3", features = [
  "rt-multi-thread",
  "net",
], optional = true }
tokio-util = { version = "0.7.18", features = ["compat"], optional = true }
url = "2.5.8"

[dev-dependencies]
criterion = { version = "4.7.0", package = "codspeed-criterion-compat" }

[[bench]]
name = "runtime_core"
harness = false

[[bench]]
name = "engine_introspection"
harness = false
