[package]
name = "ormdantic-hydrate"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Row hydration planning for Ormdantic"
readme = "README.md"

[lib]
name = "ormdantic_hydrate"
path = "src/lib.rs"

[dependencies]
ormdantic-core.workspace = true
ormdantic-schema.workspace = true

[dev-dependencies]
criterion = { version = "4.7.0", package = "codspeed-criterion-compat" }

[[bench]]
name = "hydration_planning"
harness = false

[[bench]]
name = "nested_hydration"
harness = false
